# rusty_pass_gen

./: Cargo.toml  README.md
src/: bin.rs  cli.yml  lib.rs  main.rs
