[package]
name = "rusty_pass_gen"
version = "0.1.0"
authors = ["kemicofa <einar.ase.91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = { features = ["yaml"] }

[lib]
name = "rusty_pass_gen"
path = "src/lib.rs"

[[bin]]
name = "rusty_pass_gen"
path = "src/bin.rs"